# stremio-official-addons

./: .gitignore  .npmignore  Cargo.toml  README.md  addons.json  index.json  package-lock.json  package.json
.github/workflows/: build.yml  publish.yml
deflate-macro/: Cargo.toml  README.md
deflate-macro/src/: lib.rs
flate_macro/: Cargo.toml
flate_macro/src/: lib.rs
official-addons-rust/: .gitignore  package-lock.json  package.json
official-addons-v2/: Cargo.toml  README.md  package.json
official-addons-v2/src/: lib.rs
scripts/: build.js  gen.js
