[package]
name = "stremio-official-addons"
description = "All of the stremio official addons"
version = "2.0.7"
authors = ["Smart Code OOD"]
edition = "2018"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/Stremio/stremio-official-addons"
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/addons.json",
    "/LICENSE.md",
    "/README.md"
]

[lib]
doctest = false

[dependencies]
