[package]
name = "stremio-official-addons"
description = "All of the stremio official addons"
version = "2.0.13"
authors = ["Smart Code OOD"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Stremio/stremio-official-addons"
homepage = "https://stremio.com"
include = ["/src/**/*.rs", "/Cargo.toml", "/addons.json", "/README.md"]

[features]
default = []
deflate = ["flate_macro", "flate2"]

[dependencies]
flate2 = { version = "1.*", optional = true, default-features = false, features = [
	"rust_backend",
] }
flate_macro = { path = "../flate_macro", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1.0"
