[package]
name = "stremio-official-addons"
description = "All of the stremio official addons"
version = "2.1.0"
authors = ["Smart Code OOD"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Stremio/stremio-official-addons"
homepage = "https://stremio.com"
include = ["/src/**/*.rs", "/Cargo.toml", "/addons.json", "/README.md"]

[features]
default = []
deflate = ["dep:deflate-macro", "dep:flate2"]

[dependencies]
flate2 = { version = "1", optional = true, default-features = false, features = ["rust_backend"] }
deflate-macro = { version = "0.1", optional = true, path = "../deflate-macro" }

once_cell = "1"

[dev-dependencies]
serde_json = "1.0"
